Pull request #1141: AG-11349 Move the graph line to the foreground & fix graph selector
Merge in EXTENSIONS/browser-extension from feature/AG-11349 to master

Squashed commit of the following:

commit 406385f21d1300c50549b09836e093e48aa23781
Merge: 9dd32fd8e 107acc57d
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Dec 8 16:42:22 2021 +0300

    Merge branch 'master' into feature/AG-11349

commit 9dd32fd8e7effacf57a4ec60bba75477870d19f4
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Dec 8 13:39:10 2021 +0300

    AG-11349 Move the graph line to the foreground & fix graph selector

--- a/Extension/src/pages/popup/components/Stats/StatsChart/stats-chart.pcss
+++ b/Extension/src/pages/popup/components/Stats/StatsChart/stats-chart.pcss
@@ -11,6 +11,16 @@
         position: relative;
         width: 50%;
         display: inline-block;
+
+        &--left {
+            & .stats-chart__icon {
+                left: 6px
+            }
+
+            & .stats-chart__select-in {
+                padding: 0 10px 0 30px;
+            }
+        }
     }
 
     &__select-in {
